components/side-bar/shopping-list/shopping-list.module.css
.shoppingList {
  height: 100%;
  background-color: var(--shopping-list-background);
  display: flex;
  flex-direction: column;
  align-items: center;
}
.shoppingListContiner {
  width: 82%;
  margin-top: 44px;
  margin-inline: auto;
  overflow-y: auto;
  padding-right: 5px;
  padding-bottom: 130px;
}
.shoppingListHeader {
  color: var(--title-color);
  font-size: var(--xxl-font);
  font-weight: 700;
  line-height: 30px;
}
.editIcon {
  cursor: pointer;
}
.shoppingListHeaderAndEditIconContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 40px;
}

.itemCategory {
  font-size: var(--s-font);
  font-weight: 500;
  line-height: 17.5px;
  color: var(--gray-text);
  display: block;
  margin-bottom: 25px;
}
.shoppingListItems {
  margin-bottom: 60px;
}

.addItemBackground {
  width: 80%;
  height: 130px;
  border-radius: 24px;
  background-color: var(--add-item-background);
  margin-top: 43px;
  display: flex;
  align-items: center;
  gap: 30px;
}

.addItemImageContainer {
  width: 104px;
  height: 118px;
  position: relative;
  display: inline-block;
  bottom: 18px;
  left: 12px;
}

.addItemDescription {
  font-weight: 700;
  color: var(--white);
  font-size: var(--m-font);
}

.addItemButton {
  margin-top: 14px;
}

.emptyListText {
  font-weight: 700;
  font-size: var(--xl-font);
  text-align: center;
  margin-top: 222px;
}
.emptyShoppingListImage {
  width: 245px;
  height: 203px;
  position: absolute;
  bottom: 119px;
  z-index: 1;
}
.inputBackground {
  width: 100%;
  position: absolute;
  bottom: 0;
  padding: 34px 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--white);
}
.inputContainer {
  width: 100%;
}

@media only screen and (max-width: 992px) {
  .shoppingListContiner {
    width: 95%;
    margin-top: 32px;
    padding-right: 0px;
  }
  .addItemBackground {
    width: 83%;
    height: 119px;
    margin-top: 25px;
    gap: 20px;
  }
  .addItemImageContainer {
    left: 0;
  }
  .addItemButton {
    margin-top: 12px;
  }
  .emptyShoppingListImage {
    width: 90%;
  }
  .emptyListText {
    margin-top: 100px;
  }
  .inputBackground {
    padding: 18px 20px;
  }
}

